[gd_scene load_steps=21 format=2]

[ext_resource path="res://images/ProgressBar.png" type="Texture" id=1]
[ext_resource path="res://images/Clock.png" type="Texture" id=2]
[ext_resource path="res://images/ClockFace.png" type="Texture" id=3]
[ext_resource path="res://sounds/mine.wav" type="AudioStream" id=4]
[ext_resource path="res://images/Selector.png" type="Texture" id=5]
[ext_resource path="res://Instances/BuyMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Instances/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Instances/Lander.tscn" type="PackedScene" id=8]
[ext_resource path="res://Instances/BitmapText.tscn" type="PackedScene" id=9]
[ext_resource path="res://Tilemaps/SandyTiles.tres" type="TileSet" id=10]
[ext_resource path="res://ScoutHealth.tres" type="Curve" id=11]
[ext_resource path="res://ScoutArmor.tres" type="Curve" id=12]
[ext_resource path="res://Difficulty.tres" type="Curve" id=13]
[ext_resource path="res://ScoutDamage.tres" type="Curve" id=14]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=15]
[ext_resource path="res://Scripts/Orchestrator.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Shimmer.gd" type="Script" id=17]
[ext_resource path="res://Scripts/FloatingText.gd" type="Script" id=18]
[ext_resource path="res://ScanMode.tscn" type="PackedScene" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 79, 2142 )

[node name="Game" type="Node2D"]
script = ExtResource( 16 )
difficulty = ExtResource( 13 )
scout_armor_curve = ExtResource( 12 )
scout_damage_curve = ExtResource( 14 )
scout_health_curve = ExtResource( 11 )

[node name="GameWorld" type="Node2D" parent="."]
modulate = Color( 0.870588, 0.678431, 0.956863, 1 )

[node name="TileMap" type="TileMap" parent="GameWorld"]
tile_set = ExtResource( 10 )
cell_size = Vector2( 128, 128 )
cell_custom_transform = Transform2D( 128, 0, 0, 128, 0, 0 )
format = 1
tile_data = PoolIntArray( -851987, 9, 0, -851986, 9, 0, -851985, 9, 0, -851984, 9, 0, -851983, 9, 0, -851982, 9, 0, -851981, 9, 0, -851980, 9, 0, -851979, 9, 0, -851978, 9, 0, -851977, 9, 0, -851976, 9, 0, -851975, 9, 0, -851974, 9, 0, -851973, 9, 0, -851972, 9, 0, -851971, 9, 0, -851970, 9, 0, -851969, 9, 0, -917504, 9, 0, -917503, 9, 0, -917502, 9, 0, -917501, 9, 0, -917500, 9, 0, -917499, 9, 0, -917498, 9, 0, -917497, 9, 0, -917496, 9, 0, -917495, 9, 0, -917494, 9, 0, -917493, 9, 0, -917492, 9, 0, -917491, 9, 0, -917490, 9, 0, -917489, 9, 0, -917488, 9, 0, -917487, 9, 0, -786451, 9, 0, -786450, 9, 0, -786449, 9, 0, -786448, 9, 0, -786447, 9, 0, -786446, 9, 0, -786445, 9, 0, -786444, 9, 0, -786443, 9, 0, -786442, 9, 0, -786441, 9, 0, -786440, 9, 0, -786439, 9, 0, -786438, 9, 0, -786437, 9, 0, -786436, 9, 0, -786435, 9, 0, -786434, 9, 0, -786433, 9, 0, -851968, 9, 0, -851967, 9, 0, -851966, 9, 0, -851965, 9, 0, -851964, 9, 0, -851963, 9, 0, -851962, 9, 0, -851961, 9, 0, -851960, 9, 0, -851959, 9, 0, -851958, 9, 0, -851957, 9, 0, -851956, 9, 0, -851955, 9, 0, -851954, 9, 0, -851953, 9, 0, -851952, 9, 0, -851951, 9, 0, -720915, 9, 0, -720914, 9, 0, -720913, 9, 0, -720912, 9, 0, -720911, 9, 0, -720910, 9, 0, -720909, 9, 0, -720908, 9, 0, -720907, 9, 0, -720906, 9, 0, -720905, 9, 0, -720904, 9, 0, -720903, 9, 0, -720902, 9, 0, -720901, 9, 0, -720900, 9, 0, -720899, 9, 0, -720898, 9, 0, -720897, 9, 0, -786432, 9, 0, -786431, 9, 0, -786430, 9, 0, -786429, 9, 0, -786428, 9, 0, -786427, 9, 0, -786426, 9, 0, -786425, 9, 0, -786424, 9, 0, -786423, 9, 0, -786422, 9, 0, -786421, 9, 0, -786420, 9, 0, -786419, 9, 0, -786418, 9, 0, -786417, 9, 0, -786416, 9, 0, -786415, 9, 0, -655379, 9, 0, -655378, 9, 0, -655377, 9, 0, -655376, 9, 0, -655375, 9, 0, -655374, 9, 0, -655373, 9, 0, -655372, 9, 0, -655371, 0, 0, -655370, 1, 0, -655369, 1, 0, -655368, 1, 0, -655367, 1, 0, -655366, 1, 0, -655365, 1, 0, -655364, 2, 0, -655363, 9, 0, -655362, 9, 0, -655361, 9, 0, -720896, 9, 0, -720895, 9, 0, -720894, 9, 0, -720893, 9, 0, -720892, 9, 0, -720891, 9, 0, -720890, 9, 0, -720889, 9, 0, -720888, 9, 0, -720887, 9, 0, -720886, 9, 0, -720885, 9, 0, -720884, 9, 0, -720883, 9, 0, -720882, 9, 0, -720881, 9, 0, -720880, 9, 0, -720879, 9, 0, -589843, 9, 0, -589842, 9, 0, -589841, 9, 0, -589840, 9, 0, -589839, 9, 0, -589838, 9, 0, -589837, 9, 0, -589836, 9, 0, -589835, 3, 0, -589834, 4, 0, -589833, 4, 0, -589832, 4, 0, -589831, 4, 0, -589830, 4, 0, -589829, 4, 0, -589828, 5, 0, -589827, 9, 0, -589826, 9, 0, -589825, 9, 0, -655360, 9, 0, -655359, 9, 0, -655358, 9, 0, -655357, 9, 0, -655356, 9, 0, -655355, 9, 0, -655354, 9, 0, -655353, 9, 0, -655352, 9, 0, -655351, 9, 0, -655350, 9, 0, -655349, 9, 0, -655348, 9, 0, -655347, 9, 0, -655346, 9, 0, -655345, 9, 0, -655344, 9, 0, -655343, 9, 0, -524307, 9, 0, -524306, 9, 0, -524305, 9, 0, -524304, 0, 0, -524303, 0, 0, -524302, 0, 0, -524301, 0, 0, -524300, 2, 0, -524299, 3, 0, -524298, 4, 0, -524297, 7, 0, -524296, 7, 0, -524295, 7, 0, -524294, 7, 0, -524293, 4, 0, -524292, 5, 0, -524291, 9, 0, -524290, 9, 0, -524289, 9, 0, -589824, 9, 0, -589823, 9, 0, -589822, 9, 0, -589821, 9, 0, -589820, 9, 0, -589819, 9, 0, -589818, 9, 0, -589817, 9, 0, -589816, 9, 0, -589815, 9, 0, -589814, 9, 0, -589813, 9, 0, -589812, 9, 0, -589811, 9, 0, -589810, 9, 0, -589809, 9, 0, -589808, 9, 0, -589807, 9, 0, -458771, 9, 0, -458770, 9, 0, -458769, 9, 0, -458768, 6, 0, -458767, 7, 0, -458766, 7, 0, -458765, 7, 0, -458764, 8, 0, -458763, 3, 0, -458762, 4, 0, -458761, 5, 0, -458760, 9, 0, -458759, 9, 0, -458758, 3, 0, -458757, 4, 0, -458756, 5, 0, -458755, 9, 0, -458754, 9, 0, -458753, 9, 0, -524288, 9, 0, -524287, 9, 0, -524286, 9, 0, -524285, 9, 0, -524284, 9, 0, -524283, 9, 0, -524282, 9, 0, -524281, 9, 0, -524280, 9, 0, -524279, 9, 0, -524278, 9, 0, -524277, 9, 0, -524276, 9, 0, -524275, 9, 0, -524274, 9, 0, -524273, 9, 0, -524272, 9, 0, -524271, 9, 0, -393235, 9, 0, -393234, 9, 0, -393233, 9, 0, -393232, 9, 0, -393231, 9, 0, -393230, 9, 0, -393229, 9, 0, -393228, 9, 0, -393227, 3, 0, -393226, 4, 0, -393225, 1, 0, -393224, 1, 0, -393223, 1, 0, -393222, 1, 0, -393221, 4, 0, -393220, 5, 0, -393219, 9, 0, -393218, 9, 0, -393217, 9, 0, -458752, 9, 0, -458751, 9, 0, -458750, 9, 0, -458749, 0, 0, -458748, 1, 0, -458747, 9, 0, -458746, 9, 0, -458745, 9, 0, -458744, 9, 0, -458743, 9, 0, -458742, 9, 0, -458741, 9, 0, -458740, 9, 0, -458739, 9, 0, -458738, 9, 0, -458737, 9, 0, -458736, 9, 0, -458735, 9, 0, -327699, 9, 0, -327698, 9, 0, -327697, 9, 0, -327696, 9, 0, -327695, 9, 0, -327694, 9, 0, -327693, 9, 0, -327692, 9, 0, -327691, 3, 0, -327690, 4, 0, -327689, 4, 0, -327688, 4, 0, -327687, 4, 0, -327686, 4, 0, -327685, 4, 0, -327684, 5, 0, -327683, 9, 0, -327682, 9, 0, -327681, 9, 0, -393216, 9, 0, -393215, 9, 0, -393214, 9, 0, -393213, 3, 0, -393212, 8, 0, -393211, 9, 0, -393210, 9, 0, -393209, 9, 0, -393208, 9, 0, -393207, 9, 0, -393206, 9, 0, -393205, 9, 0, -393204, 9, 0, -393203, 9, 0, -393202, 9, 0, -393201, 9, 0, -393200, 9, 0, -393199, 9, 0, -262163, 9, 0, -262162, 9, 0, -262161, 9, 0, -262160, 9, 0, -262159, 9, 0, -262158, 9, 0, -262157, 9, 0, -262156, 9, 0, -262155, 6, 0, -262154, 7, 0, -262153, 7, 0, -262152, 7, 0, -262151, 7, 0, -262150, 7, 0, -262149, 7, 0, -262148, 8, 0, -262147, 9, 0, -262146, 9, 0, -262145, 9, 0, -327680, 9, 0, -327679, 9, 0, -327678, 9, 0, -327677, 9, 0, -327676, 9, 0, -327675, 9, 0, -327674, 9, 0, -327673, 9, 0, -327672, 0, 0, -327671, 2, 0, -327670, 9, 0, -327669, 9, 0, -327668, 9, 0, -327667, 9, 0, -327666, 9, 0, -327665, 9, 0, -327664, 9, 0, -327663, 9, 0, -196627, 9, 0, -196626, 9, 0, -196625, 9, 0, -196624, 0, 0, -196623, 1, 0, -196622, 1, 0, -196621, 2, 0, -196620, 9, 0, -196619, 9, 0, -196618, 9, 0, -196617, 9, 0, -196616, 3, 0, -196615, 5, 0, -196614, 9, 0, -196613, 9, 0, -196612, 9, 0, -196611, 9, 0, -196610, 0, 0, -196609, 2, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 2, 0, -262139, 9, 0, -262138, 8, 0, -262137, 9, 0, -262136, 6, 0, -262135, 8, 0, -262134, 9, 0, -262133, 9, 0, -262132, 9, 0, -262131, 9, 0, -262130, 9, 0, -262129, 9, 0, -262128, 9, 0, -262127, 9, 0, -131091, 9, 0, -131090, 9, 0, -131089, 9, 0, -131088, 3, 0, -131087, 4, 0, -131086, 4, 0, -131085, 5, 0, -131084, 9, 0, -131083, 9, 0, -131082, 9, 0, -131081, 9, 0, -131080, 3, 0, -131079, 5, 0, -131078, 9, 0, -131077, 2, 0, -131076, 9, 0, -131075, 9, 0, -131074, 6, 0, -131073, 8, 0, -196608, 3, 0, -196607, 4, 0, -196606, 4, 0, -196605, 4, 0, -196604, 5, 0, -196603, 9, 0, -196602, 2, 0, -196601, 9, 0, -196600, 9, 0, -196599, 9, 0, -196598, 9, 0, -196597, 9, 0, -196596, 9, 0, -196595, 9, 0, -196594, 9, 0, -196593, 9, 0, -196592, 9, 0, -196591, 9, 0, -65555, 9, 0, -65554, 9, 0, -65553, 9, 0, -65552, 6, 0, -65551, 7, 0, -65550, 4, 0, -65549, 4, 0, -65548, 9, 0, -65547, 9, 0, -65546, 9, 0, -65545, 9, 0, -65544, 9, 0, -65543, 9, 0, -65542, 9, 0, -65541, 9, 0, -65540, 6, 0, -65539, 9, 0, -65538, 9, 0, -65537, 9, 0, -131072, 6, 0, -131071, 7, 0, -131070, 7, 0, -131069, 7, 0, -131068, 8, 0, -131067, 9, 0, -131066, 9, 0, -131065, 9, 0, -131064, 9, 0, -131063, 9, 0, -131062, 9, 0, -131061, 1, 0, -131060, 1, 0, -131059, 9, 0, -131058, 9, 0, -131057, 9, 0, -131056, 9, 0, -131055, 9, 0, -19, 9, 0, -18, 9, 0, -17, 9, 0, -16, 9, 0, -15, 9, 0, -14, 3, 0, -13, 4, 0, -12, 4, 0, -11, 5, 0, -10, 9, 0, -9, 9, 0, -8, 9, 0, -7, 3, 0, -6, 4, 0, -5, 2, 0, -4, 9, 0, -3, 9, 0, -2, 9, 0, -1, 9, 0, -65536, 9, 0, -65535, 0, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 2, 0, -65529, 9, 0, -65528, 0, 0, -65527, 1, 0, -65526, 1, 0, -65525, 7, 0, -65524, 7, 0, -65523, 9, 0, -65522, 9, 0, -65521, 9, 0, -65520, 9, 0, -65519, 9, 0, 65517, 9, 0, 65518, 9, 0, 65519, 9, 0, 65520, 9, 0, 65521, 9, 0, 65522, 6, 0, 65523, 7, 0, 65524, 7, 0, 65525, 8, 0, 65526, 9, 0, 65527, 9, 0, 65528, 9, 0, 65529, 3, 0, 65530, 4, 0, 65531, 4, 0, 65532, 2, 0, 65533, 9, 0, 65534, 9, 0, 65535, 9, 0, 0, 9, 0, 1, 3, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 5, 0, 7, 9, 0, 8, 6, 0, 9, 7, 0, 10, 7, 0, 11, 9, 0, 12, 9, 0, 13, 9, 0, 14, 9, 0, 15, 9, 0, 16, 9, 0, 17, 9, 0, 131053, 9, 0, 131054, 9, 0, 131055, 9, 0, 131056, 9, 0, 131057, 9, 0, 131058, 9, 0, 131059, 9, 0, 131060, 9, 0, 131061, 9, 0, 131062, 9, 0, 131063, 9, 0, 131064, 9, 0, 131065, 3, 0, 131066, 6, 0, 131067, 4, 0, 131068, 4, 0, 131069, 9, 0, 131070, 9, 0, 131071, 1, 0, 65536, 9, 0, 65537, 3, 0, 65538, 4, 0, 65539, 4, 0, 65540, 7, 0, 65541, 7, 0, 65542, 9, 0, 65543, 9, 0, 65544, 9, 0, 65545, 9, 0, 65546, 9, 0, 65547, 9, 0, 65548, 9, 0, 65549, 9, 0, 65550, 9, 0, 65551, 9, 0, 65552, 9, 0, 65553, 9, 0, 196589, 9, 0, 196590, 9, 0, 196591, 9, 0, 196592, 9, 0, 196593, 0, 0, 196594, 1, 0, 196595, 2, 0, 196596, 2, 0, 196597, 9, 0, 196598, 9, 0, 196599, 9, 0, 196600, 9, 0, 196601, 9, 0, 196602, 9, 0, 196603, 7, 0, 196604, 9, 0, 196605, 9, 0, 196606, 9, 0, 196607, 4, 0, 131072, 5, 0, 131073, 6, 0, 131074, 7, 0, 131075, 7, 0, 131076, 9, 0, 131077, 9, 0, 131078, 1, 0, 131079, 1, 0, 131080, 9, 0, 131081, 9, 0, 131082, 9, 0, 131083, 0, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 2, 0, 131089, 9, 0, 262125, 9, 0, 262126, 9, 0, 262127, 9, 0, 262128, 3, 0, 262129, 0, 0, 262130, 4, 0, 262131, 4, 0, 262132, 5, 0, 262133, 9, 0, 262134, 9, 0, 262135, 9, 0, 262136, 1, 0, 262137, 1, 0, 262138, 9, 0, 262139, 9, 0, 262140, 9, 0, 262141, 2, 0, 262142, 9, 0, 262143, 4, 0, 196608, 4, 0, 196609, 0, 0, 196610, 1, 0, 196611, 9, 0, 196612, 9, 0, 196613, 3, 0, 196614, 4, 0, 196615, 4, 0, 196616, 9, 0, 196617, 9, 0, 196618, 9, 0, 196619, 3, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 5, 0, 196625, 9, 0, 327661, 9, 0, 327662, 9, 0, 327663, 0, 0, 327664, 0, 0, 327665, 4, 0, 327666, 4, 0, 327667, 8, 0, 327668, 9, 0, 327669, 9, 0, 327670, 9, 0, 327671, 0, 0, 327672, 4, 0, 327673, 4, 0, 327674, 5, 0, 327675, 9, 0, 327676, 6, 0, 327677, 9, 0, 327678, 9, 0, 327679, 4, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 5, 0, 262148, 3, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 9, 0, 262153, 9, 0, 262154, 9, 0, 262155, 3, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 5, 0, 262161, 9, 0, 393197, 9, 0, 393198, 9, 0, 393199, 3, 0, 393200, 4, 0, 393201, 4, 0, 393202, 8, 0, 393203, 9, 0, 393204, 9, 0, 393205, 3, 0, 393206, 4, 0, 393207, 4, 0, 393208, 4, 0, 393209, 4, 0, 393210, 4, 0, 393211, 5, 0, 393212, 9, 0, 393213, 9, 0, 393214, 9, 0, 393215, 9, 0, 327680, 9, 0, 327681, 9, 0, 327682, 9, 0, 327683, 9, 0, 327684, 9, 0, 327685, 9, 0, 327686, 9, 0, 327687, 9, 0, 327688, 9, 0, 327689, 9, 0, 327690, 9, 0, 327691, 6, 0, 327692, 7, 0, 327693, 6, 0, 327694, 4, 0, 327695, 4, 0, 327696, 5, 0, 327697, 9, 0, 458733, 9, 0, 458734, 9, 0, 458735, 6, 0, 458736, 7, 0, 458737, 7, 0, 458738, 9, 0, 458739, 9, 0, 458740, 9, 0, 458741, 6, 0, 458742, 7, 0, 458743, 4, 0, 458744, 4, 0, 458745, 4, 0, 458746, 4, 0, 458747, 5, 0, 458748, 9, 0, 458749, 9, 0, 458750, 9, 0, 458751, 9, 0, 393216, 0, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 2, 0, 393226, 9, 0, 393227, 9, 0, 393228, 9, 0, 393229, 3, 0, 393230, 4, 0, 393231, 4, 0, 393232, 5, 0, 393233, 9, 0, 524269, 9, 0, 524270, 9, 0, 524271, 9, 0, 524272, 9, 0, 524273, 9, 0, 524274, 9, 0, 524275, 9, 0, 524276, 9, 0, 524277, 9, 0, 524278, 6, 0, 524279, 7, 0, 524280, 7, 0, 524281, 7, 0, 524282, 7, 0, 524283, 8, 0, 524284, 9, 0, 524285, 9, 0, 524286, 9, 0, 524287, 0, 0, 458752, 3, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 5, 0, 458762, 9, 0, 458763, 9, 0, 458764, 9, 0, 458765, 6, 0, 458766, 7, 0, 458767, 7, 0, 458768, 8, 0, 458769, 9, 0, 589805, 9, 0, 589806, 9, 0, 589807, 9, 0, 589808, 9, 0, 589809, 0, 0, 589810, 1, 0, 589811, 2, 0, 589812, 9, 0, 589813, 9, 0, 589814, 9, 0, 589815, 9, 0, 589816, 9, 0, 589817, 9, 0, 589818, 9, 0, 589819, 9, 0, 589820, 9, 0, 589821, 9, 0, 589822, 9, 0, 589823, 3, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 5, 0, 524299, 9, 0, 524300, 9, 0, 524301, 9, 0, 524302, 9, 0, 524303, 9, 0, 524304, 9, 0, 524305, 9, 0, 655341, 9, 0, 655342, 9, 0, 655343, 9, 0, 655344, 9, 0, 655345, 3, 0, 655346, 4, 0, 655347, 5, 0, 655348, 9, 0, 655349, 9, 0, 655350, 9, 0, 655351, 9, 0, 655352, 9, 0, 655353, 9, 0, 655354, 9, 0, 655355, 9, 0, 655356, 9, 0, 655357, 9, 0, 655358, 9, 0, 655359, 6, 0, 589824, 6, 0, 589825, 7, 0, 589826, 7, 0, 589827, 3, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 7, 0, 589833, 7, 0, 589834, 9, 0, 589835, 9, 0, 589836, 9, 0, 589837, 9, 0, 589838, 9, 0, 589839, 9, 0, 589840, 9, 0, 589841, 9, 0, 720877, 9, 0, 720878, 9, 0, 720879, 9, 0, 720880, 9, 0, 720881, 6, 0, 720882, 7, 0, 720883, 8, 0, 720884, 9, 0, 720885, 9, 0, 720886, 9, 0, 720887, 9, 0, 720888, 9, 0, 720889, 1, 0, 720890, 1, 0, 720891, 1, 0, 720892, 1, 0, 720893, 1, 0, 720894, 2, 0, 720895, 9, 0, 655360, 9, 0, 655361, 9, 0, 655362, 9, 0, 655363, 6, 0, 655364, 7, 0, 655365, 7, 0, 655366, 7, 0, 655367, 7, 0, 655368, 9, 0, 655369, 9, 0, 655370, 9, 0, 655371, 9, 0, 655372, 9, 0, 655373, 9, 0, 655374, 9, 0, 655375, 9, 0, 655376, 9, 0, 655377, 9, 0, 786413, 9, 0, 786414, 9, 0, 786415, 9, 0, 786416, 9, 0, 786417, 9, 0, 786418, 9, 0, 786419, 9, 0, 786420, 0, 0, 786421, 1, 0, 786422, 1, 0, 786423, 1, 0, 786424, 0, 0, 786425, 4, 0, 786426, 4, 0, 786427, 4, 0, 786428, 4, 0, 786429, 4, 0, 786430, 5, 0, 786431, 9, 0, 720896, 9, 0, 720897, 9, 0, 720898, 9, 0, 720899, 9, 0, 720900, 9, 0, 720901, 9, 0, 720902, 9, 0, 720903, 9, 0, 720904, 9, 0, 720905, 9, 0, 720906, 9, 0, 720907, 9, 0, 720908, 9, 0, 720909, 9, 0, 720910, 9, 0, 720911, 9, 0, 720912, 9, 0, 720913, 9, 0, 851949, 9, 0, 851950, 9, 0, 851951, 9, 0, 851952, 9, 0, 851953, 9, 0, 851954, 9, 0, 851955, 9, 0, 851956, 3, 0, 851957, 4, 0, 851958, 4, 0, 851959, 4, 0, 851960, 4, 0, 851961, 4, 0, 851962, 8, 0, 851963, 7, 0, 851964, 7, 0, 851965, 7, 0, 851966, 8, 0, 851967, 9, 0, 786432, 9, 0, 786433, 9, 0, 786434, 9, 0, 786435, 9, 0, 786436, 9, 0, 786437, 9, 0, 786438, 9, 0, 786439, 9, 0, 786440, 9, 0, 786441, 9, 0, 786442, 9, 0, 786443, 9, 0, 786444, 9, 0, 786445, 9, 0, 786446, 9, 0, 786447, 9, 0, 786448, 9, 0, 786449, 9, 0, 917485, 9, 0, 917486, 9, 0, 917487, 9, 0, 917488, 9, 0, 917489, 9, 0, 917490, 9, 0, 917491, 9, 0, 917492, 6, 0, 917493, 7, 0, 917494, 7, 0, 917495, 7, 0, 917496, 7, 0, 917497, 7, 0, 917498, 7, 0, 917499, 9, 0, 917500, 9, 0, 917501, 9, 0, 917502, 9, 0, 917503, 9, 0, 851968, 9, 0, 851969, 9, 0, 851970, 9, 0, 851971, 9, 0, 851972, 9, 0, 851973, 9, 0, 851974, 9, 0, 851975, 9, 0, 851976, 9, 0, 851977, 9, 0, 851978, 9, 0, 851979, 9, 0, 851980, 9, 0, 851981, 9, 0, 851982, 9, 0, 851983, 9, 0, 851984, 9, 0, 851985, 9, 0, 983021, 9, 0, 983022, 9, 0, 983023, 9, 0, 983024, 9, 0, 983025, 9, 0, 983026, 9, 0, 983027, 9, 0, 983028, 9, 0, 983029, 9, 0, 983030, 9, 0, 983031, 9, 0, 983032, 9, 0, 983033, 9, 0, 983034, 9, 0, 983035, 9, 0, 983036, 9, 0, 983037, 9, 0, 983038, 9, 0, 983039, 9, 0, 917504, 9, 0, 917505, 9, 0, 917506, 9, 0, 917507, 9, 0, 917508, 9, 0, 917509, 9, 0, 917510, 9, 0, 917511, 9, 0, 917512, 9, 0, 917513, 9, 0, 917514, 9, 0, 917515, 9, 0, 917516, 9, 0, 917517, 9, 0, 917518, 9, 0, 917519, 9, 0, 917520, 9, 0, 917521, 9, 0, 1048557, 9, 0, 1048558, 9, 0, 1048559, 9, 0, 1048560, 9, 0, 1048561, 9, 0, 1048562, 9, 0, 1048563, 9, 0, 1048564, 9, 0, 1048565, 9, 0, 1048566, 9, 0, 1048567, 9, 0, 1048568, 9, 0, 1048569, 9, 0, 1048570, 9, 0, 1048571, 9, 0, 1048572, 9, 0, 1048573, 9, 0, 1048574, 9, 0, 1048575, 9, 0, 983040, 9, 0, 983041, 9, 0, 983042, 9, 0, 983043, 9, 0, 983044, 9, 0, 983045, 9, 0, 983046, 9, 0, 983047, 9, 0, 983048, 9, 0, 983049, 9, 0, 983050, 9, 0, 983051, 9, 0, 983052, 9, 0, 983053, 9, 0, 983054, 9, 0, 983055, 9, 0, 983056, 9, 0, 983057, 9, 0, 1114093, 9, 0, 1114094, 9, 0, 1114095, 9, 0, 1114096, 9, 0, 1114097, 9, 0, 1114098, 9, 0, 1114099, 9, 0, 1114100, 9, 0, 1114101, 9, 0, 1114102, 9, 0, 1114103, 9, 0, 1114104, 9, 0, 1114105, 9, 0, 1114106, 9, 0, 1114107, 9, 0, 1114108, 9, 0, 1114109, 9, 0, 1114110, 9, 0, 1114111, 9, 0, 1048576, 9, 0, 1048577, 9, 0, 1048578, 9, 0, 1048579, 9, 0, 1048580, 9, 0, 1048581, 9, 0, 1048582, 9, 0, 1048583, 9, 0, 1048584, 9, 0, 1048585, 9, 0, 1048586, 9, 0, 1048587, 9, 0, 1048588, 9, 0, 1048589, 9, 0, 1048590, 9, 0, 1048591, 9, 0, 1048592, 9, 0, 1048593, 9, 0 )

[node name="Lander" parent="GameWorld" instance=ExtResource( 8 )]
position = Vector2( 55, 37 )

[node name="Enemies" type="Node2D" parent="GameWorld"]
z_index = 2

[node name="RigidBody2D" type="RigidBody2D" parent="GameWorld"]
collision_layer = 4
collision_mask = 4
mode = 1
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameWorld/RigidBody2D"]
position = Vector2( -2088, 188 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GameWorld/RigidBody2D"]
position = Vector2( -64, 1944 )
rotation = -1.57079
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="GameWorld/RigidBody2D"]
position = Vector2( 1945, 212 )
rotation = -3.14159
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="GameWorld/RigidBody2D"]
position = Vector2( -75, -1544 )
rotation = -4.71238
shape = SubResource( 1 )

[node name="GroundSelector" type="Node2D" parent="."]
light_mask = 2
position = Vector2( -140, -128 )
z_index = 1
script = ExtResource( 17 )

[node name="NinePatchRect" type="NinePatchRect" parent="GroundSelector"]
light_mask = 2
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 5 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="MainText" parent="GroundSelector" instance=ExtResource( 9 )]
margin_left = 5.0
margin_top = 10.0
text = "SOME TEXT"

[node name="Minerals" parent="GroundSelector" instance=ExtResource( 9 )]
margin_left = 5.0
margin_top = 79.0
text = "SOME TEXT"

[node name="Silicates" parent="GroundSelector" instance=ExtResource( 9 )]
margin_left = 5.0
margin_top = 69.0
text = "SOME TEXT"

[node name="ProgressBar" type="NinePatchRect" parent="GroundSelector"]
light_mask = 2
margin_left = 5.0
margin_top = 20.0
margin_right = 19.0
margin_bottom = 30.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 14, 10 )
patch_margin_left = 3
patch_margin_top = 2
patch_margin_right = 10
patch_margin_bottom = 2

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 53, 95 )
z_index = 2
collision_layer = 7

[node name="MiningSuccessText" type="Node2D" parent="."]
position = Vector2( -213, -101 )
script = ExtResource( 18 )

[node name="VBoxContainer" type="VBoxContainer" parent="MiningSuccessText"]
margin_right = 94.0
margin_bottom = 40.0
custom_constants/separation = 20

[node name="MineralsText" parent="MiningSuccessText/VBoxContainer" instance=ExtResource( 9 )]
margin_right = 94.0
text = "( + 22"

[node name="SilicatesText" parent="MiningSuccessText/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 34.0
margin_right = 94.0
margin_bottom = 48.0
text = ") + 6"

[node name="Tween" type="Tween" parent="MiningSuccessText"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer"]
margin_right = 316.0
margin_bottom = 232.0

[node name="Viewport" type="Viewport" parent="CanvasLayer/ViewportContainer"]
size = Vector2( 640, 360 )
transparent_bg = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="Scan" parent="CanvasLayer/ViewportContainer/Viewport" instance=ExtResource( 19 )]
visible = false

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2
script = ExtResource( 15 )

[node name="GUI" type="MarginContainer" parent="UI"]
margin_right = 635.0
margin_bottom = 31.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GUI"]
margin_left = 20.0
margin_top = 20.0
margin_right = 615.0
margin_bottom = 68.0

[node name="ClockContainer" type="VBoxContainer" parent="UI/GUI/HBoxContainer"]
margin_right = 526.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="Clock" type="Sprite" parent="UI/GUI/HBoxContainer/ClockContainer"]
position = Vector2( 15, 11 )
texture = ExtResource( 2 )

[node name="ClockFace" type="Sprite" parent="UI/GUI/HBoxContainer/ClockContainer"]
position = Vector2( 15, 11 )
texture = ExtResource( 3 )

[node name="Materials" type="VBoxContainer" parent="UI/GUI/HBoxContainer"]
margin_left = 530.0
margin_right = 595.0
margin_bottom = 48.0
custom_constants/separation = 20

[node name="UI_Minerals" parent="UI/GUI/HBoxContainer/Materials" instance=ExtResource( 9 )]
size_flags_horizontal = 3
text = "(: 25"

[node name="UI_Silicates" parent="UI/GUI/HBoxContainer/Materials" instance=ExtResource( 9 )]
margin_top = 34.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "): 25"

[node name="BuyMenu" parent="UI" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.857
anchor_bottom = 1.0
margin_right = 91.52
margin_bottom = 0.0

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 99.0

[node name="TimeOfDayTweener" type="Tween" parent="."]

[node name="MenuOpenTimer" type="Timer" parent="."]
one_shot = true

[node name="MineSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="on_tile_mined" from="." to="CanvasLayer/ViewportContainer/Viewport/Scan" method="_on_Game_on_tile_mined"]
[connection signal="on_item_chosen" from="UI/BuyMenu" to="." method="_on_BuyMenu_on_item_chosen"]
[connection signal="on_menu_closed" from="UI/BuyMenu" to="." method="_on_BuyMenu_on_menu_closed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="MenuOpenTimer" to="." method="_on_MenuOpenTimer_timeout"]
